--- a/quiz_app/templates/quiz_app/history_list.html
+++ b/quiz_app/templates/quiz_app/history_list.html
@@ -55,5 +55,6 @@
 {% endblock %}
 
 {% block extra_js %}
+{{ block.super }}
 <script src="{% static 'quiz_app/js/history_list_logic.js' %}"></script>
 {% endblock %}
