--- a/quiz_app/templates/quiz_app/question_list.html
+++ b/quiz_app/templates/quiz_app/question_list.html
@@ -120,6 +120,7 @@
 {% endblock %}
 
 {% block extra_js %}
+{{ block.super }}
 <style>
     .answer-form-row.is-hidden { display: none; }
     .answer-form-row p { margin-bottom: 0.5rem; }
