--- a/quiz_app/templates/quiz_app/quiz_list.html
+++ b/quiz_app/templates/quiz_app/quiz_list.html
@@ -249,5 +249,6 @@
 {% endblock %} 
 
 {% block extra_js %}
+{{ block.super }}
 <script src="{% static 'quiz_app/js/quiz_list_logic.js' %}"></script>
 {% endblock %}
