--- a/quiz_app/templates/quiz_app/question_search.html
+++ b/quiz_app/templates/quiz_app/question_search.html
@@ -67,5 +67,6 @@
 {% endblock %}
 
 {% block extra_js %}
+{{ block.super }}
 <script src="{% static 'quiz_app/js/question_search_logic.js' %}"></script>
 {% endblock %}
