--- a/quiz_app/templates/quiz_app/topic_group_list.html
+++ b/quiz_app/templates/quiz_app/topic_group_list.html
@@ -243,5 +243,6 @@
 {% endblock %}
 
 {% block extra_js %}
+{{ block.super }}
 <script src="{% static 'quiz_app/js/topic_management.js' %}"></script>
 {% endblock %}
